add icons for grids, closes #1

--- a/pg_timetable_gui.lpi
+++ b/pg_timetable_gui.lpi
@@ -118,7 +118,7 @@
         <PackageName Value="LCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="6">
       <Unit0>
         <Filename Value="pg_timetable_gui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -144,6 +144,14 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="uObjects"/>
       </Unit3>
+      <Unit4>
+        <Filename Value=".gitignore"/>
+        <IsPartOfProject Value="True"/>
+      </Unit4>
+      <Unit5>
+        <Filename Value="LICENSE"/>
+        <IsPartOfProject Value="True"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
