--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,9 @@ jobs:
 
     - name: Build the Main Application
       if: ${{ matrix.operating-system != 'macos-latest' }}
-      run: lazbuild -B "pg_timetable_gui.lpi"
+      run: |
+        ls -a
+        lazbuild -B "pg_timetable_gui.lpi"
 
     - name: Build the Main Application (macOS)
       if: ${{ matrix.operating-system == 'macos-latest' }}
