[*] run daily build only if `*.pas` or `*.lfm` files changed

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -4,11 +4,14 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main 
+      - 'main' 
+    paths:
+      - '**.pas'
+      - '**.lfm'
 
 jobs:
   daily_build:
-    if: false # set to false to disable
+    if: true # set to false to disable
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
