--- a/pg_timetable_gui.lpi
+++ b/pg_timetable_gui.lpi
@@ -118,7 +118,7 @@
         <PackageName Value="LCL"/>
       </Item4>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="10">
       <Unit0>
         <Filename Value="pg_timetable_gui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -165,13 +165,20 @@
         <UnitName Value="fmConnect"/>
       </Unit7>
       <Unit8>
-        <Filename Value="forms\frametaskcommand.pas"/>
+        <Filename Value="forms\framebase.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="frmTaskCommand"/>
+        <ComponentName Value="BaseFrame"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
-        <UnitName Value="frameTaskCommand"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="forms\frametaskcommandeditor.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="frmTaskCommandEditor"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="frameTaskCommandEditor"/>
+      </Unit9>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
