--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       uses: gcarreno/setup-lazarus@v3.2
       with:
         lazarus-version: ${{ matrix.lazarus-versions }}
-        with-cache: false
+        with-cache: true
 
     - name: Build the application
       if: ${{ matrix.operating-system != 'macos-latest' }}
